# GSeekBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
bot/: main.py
bot/handlers/: __init__.py  inline.py  message.py
bot/middlewares/: __init__.py  check_chat_middleware.py  check_user_middleware.py  logging_middleware.py  throttling_middleware.py
bot/services/: duckduckgo.py
core/: config.py  logger.py
database/: connection.py
database/models/: user.py
