[project]
name = "gseekbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "beanie>=1.30.0",
    "beautifulsoup4>=4.13.4",
    "cachetools>=6.1.0",
    "duckduckgo-search>=8.0.4",
    "fluent-runtime>=0.4.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.9.1",
    "translate>=3.6.1",
]
